# litellm-ollama-shim

./: AGENT.md  AGENTS.md  LICENSE  README.md  pyproject.toml
src/litellm_ollama_shim/: __init__.py  __main__.py  types.py
tests/: test_translations.py
