[project]
name = "litellm-ollama-shim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.72.4",
    "fastapi>=0.111.0",
]

[project.scripts]
litellm-ollama-shim = "litellm_ollama_shim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]


[tool.ruff.lint]
select = [
  "E",        # full pycodestyle (superset of E4/E7/E9)
  "F",        # Pyflakes

  # Code-correctness & modernization
  "B",        # flake8-bugbear  – probable bugs & foot-guns
  "UP",       # pyupgrade       – auto-modernise to the minimum Python
  "SIM",      # flake8-simplify – flag pointless constructs

  # Hygiene & consistency
  "I",        # isort           – deterministic import order
  "RUF",      # Ruff-specific   – incl. RUF100 (unused noqa)

  # Optional-but-useful extras
  "ARG",      # flake8-unused-arguments – dead params
  "S",        # flake8-bandit   – basic security checks
  "N",        # pep8-naming     – function/class naming
  "D",        # pydocstyle      – docstring conventions
]

# Treat line length as a formatter concern
ignore = ["E501"]

# Silence deliberate re-exports
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

